--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
     "expo-status-bar": "~1.6.0",
     "lottie-react-native": "5.1.6",
     "react": "18.2.0",
-    "react-native": "0.72.5",
+    "react-native": "0.72.6",
     "react-native-paper": "^5.11.0",
-    "react-native-safe-area-context": "^4.7.3",
+    "react-native-safe-area-context": "4.6.3",
     "react-native-vector-icons": "^10.0.0",
     "react-native-svg": "13.9.0"
   },
